--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "mobile-detect": "^1.4.5",
     "sass": "^1.57.1",
+    "vite-plugin-vuetify": "^1.0.2",
     "vuetify": "^3.1.1"
   }
 }
