--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.1.96",
+    "@nuxt/devtools": "^0.2.5",
     "@nuxtjs/google-fonts": "^2.0.0",
     "autoprefixer": "^10.4.13",
     "nuxt": "^3.0.0",
@@ -18,6 +19,7 @@
   "dependencies": {
     "mobile-detect": "^1.4.5",
     "sass": "^1.57.1",
+    "vite-plugin-vuetify": "^1.0.2",
     "vuetify": "^3.1.1"
   }
 }
