--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
+    "@iconify-json/fluent-emoji": "^1.2.2",
+    "@iconify-json/mdi": "^1.2.2",
     "mobile-detect": "^1.4.5",
     "sass": "^1.57.1",
     "vite-plugin-vuetify": "^2.0.2",
