--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "autoprefixer": "^10.4.13",
     "nuxt": "^3.0.0",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
-  },
-  "dependencies": {
+    "tailwindcss": "^3.2.4",
     "@iconify-json/fluent-emoji": "^1.2.2",
     "@iconify-json/mdi": "^1.2.2",
+  },
+  "dependencies": {
     "sass": "^1.57.1",
     "vite-plugin-vuetify": "^2.0.2",
     "vuetify": "^3.1.1"
