--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "@iconify-json/fluent-emoji": "^1.2.2",
-    "@iconify-json/mdi": "^1.2.2",
+    "@iconify-json/mdi": "^1.2.2"
   },
   "dependencies": {
     "sass": "^1.57.1",
